@@ -1,3 +1,7 @@
+2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* properties.c:  HIGify the action area of the preferences dialog.  
+
 2003-04-22  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* properties.c:  More HIGification of the preferences dialog.  
